Added 429 response to All APIs
