# src/main/resources/openApi/fraud-checker.yml
@@ -44,6 +44,8 @@ paths:
           description: Forbidden
         '404':
           description: Not Found
+        '429':
+          description: Too Many Requests
         '500':
           description: Internal Server Error
   /ping:
@@ -54,7 +56,7 @@ paths:
       operationId: pongUsingGET
       responses:
         '200':
-          description: OK
+          description: Got Health status
           content:
             application/json:
               schema:
@@ -65,6 +67,8 @@ paths:
           description: Forbidden
         '404':
           description: Not Found
+        '429':
+          description: Too Many Requests
   '/validatePathVariable/{id}':
     get:
       tags:
@@ -97,6 +101,8 @@ paths:
           description: Forbidden
         '404':
           description: Not Found
+        '429':
+          description: Too Many Requests
   /validateRequestParameter:
     get:
       tags:
@@ -129,6 +135,8 @@ paths:
           description: Forbidden
         '404':
           description: Not Found
+        '429':
+          description: Too Many Requests
 components:
   schemas:
     CreditCard:
